overflow fix

--- a/wp-content/themes/stella-horeca/assets/scss/theme/base/_default.scss
+++ b/wp-content/themes/stella-horeca/assets/scss/theme/base/_default.scss
@@ -11,8 +11,6 @@ html {
   overflow-x: hidden;
 
   &.menu-open {
-    overflow: hidden;
-
     .middle-nav {
       transform: translateX(0);
     }
