--- a/wp-content/themes/stella-horeca/assets/scss/theme/sections/_navbar.scss
+++ b/wp-content/themes/stella-horeca/assets/scss/theme/sections/_navbar.scss
@@ -4,11 +4,13 @@
   border-bottom: 3px solid $dark-300;
   z-index: 15;
   position: relative;
+  background-color: $black;
 
   @media (max-width: $lg) {
-    position: relative;
+    position: sticky;
     z-index: 10;
     padding: 2.3rem 0;
+    inset: 0;
   }
 
   &--wrapper {
